refactor(import): simplify mapper lookup