@@ -52,10 +52,11 @@ class BankCsvImportServiceTest {
         when(file.getInputStream()).thenReturn(InputStream.nullInputStream());
         when(ingParser.parse(any())).thenReturn(List.of(dto));
         Account account = new Account();
-        when(accountRepository.findAllByIbanIn(List.of("DE"))).thenReturn(List.of(account));
+        account.setIban("DE");
+        when(accountRepository.findAllByIbanIn(java.util.Set.of("DE"))).thenReturn(List.of(account));
         BankTransaction entity = new BankTransaction();
         entity.setAccount(account);
-        when(mapper.toEntity(eq(dto), anyMap())).thenReturn(entity);
+        when(mapper.toEntity(eq(dto), eq(account))).thenReturn(entity);
         when(repository.existsByAccountAndBookingDateAndPurposeAndCounterpartyAndAmount(
                         eq(account), any(), any(), any(), any()))
                 .thenReturn(false);
@@ -82,10 +83,11 @@ class BankCsvImportServiceTest {
         when(file.getInputStream()).thenReturn(InputStream.nullInputStream());
         when(ingParser.parse(any())).thenReturn(List.of(dto));
         Account account = new Account();
-        when(accountRepository.findAllByIbanIn(List.of("DE"))).thenReturn(List.of(account));
+        account.setIban("DE");
+        when(accountRepository.findAllByIbanIn(java.util.Set.of("DE"))).thenReturn(List.of(account));
         BankTransaction entity = new BankTransaction();
         entity.setAccount(account);
-        when(mapper.toEntity(eq(dto), anyMap())).thenReturn(entity);
+        when(mapper.toEntity(eq(dto), eq(account))).thenReturn(entity);
         when(repository.existsByAccountAndBookingDateAndPurposeAndCounterpartyAndAmount(
                         eq(account), any(), any(), any(), any()))
                 .thenReturn(true);
@@ -102,22 +104,14 @@ class BankCsvImportServiceTest {
         CamtV8TransactionDTO dto = new CamtV8TransactionDTO();
         when(file.getInputStream()).thenReturn(InputStream.nullInputStream());
         when(camtParser.parse(any())).thenReturn(List.of(dto));
-        Account account = new Account();
-        when(accountRepository.findAllByIbanIn(java.util.Collections.singleton(null)))
-                .thenReturn(List.of(account));
-        BankTransaction entity = new BankTransaction();
-        entity.setAccount(account);
-        when(mapper.toEntity(eq(dto), anyMap())).thenReturn(entity);
-        when(repository.existsByAccountAndBookingDateAndPurposeAndCounterpartyAndAmount(
-                        eq(account), any(), any(), any(), any()))
-                .thenReturn(false);
-
-        when(repository.save(entity)).thenReturn(entity);
-        when(mapper.toDto(entity)).thenReturn(dto);
+        when(accountRepository.findAllByIbanIn(java.util.Collections.emptySet()))
+                .thenReturn(java.util.Collections.emptyList());
+        when(mapper.toEntity(eq(dto), isNull())).thenReturn(new BankTransaction());
 
         List<BankTransactionDTO> result = service.importCsv(BankType.CAMT_V8, file);
 
-        assertEquals(List.of(dto), result);
+        assertTrue(result.isEmpty());
+        verify(repository, never()).save(any());
     }
 
     @Test
@@ -140,13 +134,14 @@ class BankCsvImportServiceTest {
         when(file.getInputStream()).thenReturn(InputStream.nullInputStream());
         when(ingParser.parse(any())).thenReturn((List) List.of(dto1, dto2));
         Account account = new Account();
-        when(accountRepository.findAllByIbanIn(List.of("DE"))).thenReturn(List.of(account));
+        account.setIban("DE");
+        when(accountRepository.findAllByIbanIn(java.util.Set.of("DE"))).thenReturn(List.of(account));
         BankTransaction e1 = new BankTransaction();
         e1.setAccount(account);
         BankTransaction e2 = new BankTransaction();
         e2.setAccount(account);
-        when(mapper.toEntity(eq(dto1), anyMap())).thenReturn(e1);
-        when(mapper.toEntity(eq(dto2), anyMap())).thenReturn(e2);
+        when(mapper.toEntity(eq(dto1), eq(account))).thenReturn(e1);
+        when(mapper.toEntity(eq(dto2), eq(account))).thenReturn(e2);
         when(repository.existsByAccountAndBookingDateAndPurposeAndCounterpartyAndAmount(
                         eq(account), any(), any(), any(), any()))
                 .thenReturn(false);
